--- a/views/views.xml
+++ b/views/views.xml
@@ -54,6 +54,11 @@
         parent="jai_quran_menu_root"
         action="jai_quran_ayat_action_window"/>
 
+    <menuitem name="Daftar Tafsir" 
+        id="jai_quran_ayat_menu"
+        parent="jai_quran_menu_root"
+        action="jai_quran_tafsir_action_window"/>
+
     <!-- <menuitem name="Server to list" id="jai_quran" parent="jai_quran.menu_2"
               action="jai_quran.action_server"/> -->
 
